--- a/src/components/Header/HeaderBar.scss
+++ b/src/components/Header/HeaderBar.scss
@@ -29,6 +29,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 1rem;
     margin-top: 5.5em;
     
     @media screen and (max-width: 767px) {
@@ -86,7 +87,6 @@
 
     @media (max-width: 899px) {
       margin-left: 0;
-      margin-top: 1rem;
     }
 
     @media (max-width: 599px) {
